.github, README: sign release archives with minisign (#557)
Since commit f7c12253077d ("build: upload checksums file", 2022-04-13),
each configlet release has a checksums file. The assets for the most
recent release were:

    configlet_4.0.0-beta.12_checksums_sha256.txt
    configlet_4.0.0-beta.12_linux_x86-64.tar.gz
    configlet_4.0.0-beta.12_macos_x86-64.tar.gz
    configlet_4.0.0-beta.12_windows_x86-64.zip

But confirming a checksum match only checks for accidental corruption.
Add signing with minisign [1] to the release process, such that the next
release will have a .minisig file for each archive:

    configlet_4.0.0-beta.13_checksums_sha256.txt
    configlet_4.0.0-beta.13_linux_x86-64.tar.gz
    configlet_4.0.0-beta.13_linux_x86-64.tar.gz.minisig
    configlet_4.0.0-beta.13_macos_x86-64.tar.gz
    configlet_4.0.0-beta.13_macos_x86-64.tar.gz.minisig
    configlet_4.0.0-beta.13_windows_x86-64.zip
    configlet_4.0.0-beta.13_windows_x86-64.zip.minisig

From the minisign docs [2]:

    Minisign is a dead simple tool to sign files and verify signatures.

    It is portable, lightweight, and uses the highly secure Ed25519 public-key signature system.

For example, to verify the above Linux x86-64 release archive, run:

    minisign -Vm configlet_4.0.0-beta.13_linux_x86-64.tar.gz -P RWQGj6DTXgYLhKvWJMGtbDUrZerawUcyWnti9MGuWMx7VDW9DqZn2tMZ

where the argument to -P is the configlet minisign public key.
Alternatively, you can download the configlet-minisign.pub file and run:

    minisign -Vm configlet_4.0.0-beta.13_linux_x86-64.tar.gz -p configlet-minisign.pub

Minisign is an implementation of OpenBSD's signify protocol. For more
background, see posts on signify [3] and problems with PGP [4].

An alternative would be to sign releases with an SSH key [5], but
minisign is more focused, always uses Ed25519, and is simpler.
Especially for verification.

Some other projects that sign releases with minisign or signify:

- libs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,8 @@ jobs:
 
     name: "${{ matrix.os }}-${{ matrix.arch }}"
     runs-on: ${{ matrix.runs-on }}
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
@@ -63,12 +65,18 @@ jobs:
   checksums:
     needs: [build]
     runs-on: ubuntu-22.04
-    name: Upload checksums file
+    name: Upload signatures and checksums
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
 
-      - name: Upload checksums file
-        run: ./.github/bin/upload-checksums-file
+      - name: Install minisign
+        run: ./.github/bin/linux-install-minisign
+
+      - name: Upload signatures and checksums
+        run: ./.github/bin/upload-signatures-and-checksums
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONFIGLET_MINISIGN_SECRET_KEY: ${{ secrets.CONFIGLET_MINISIGN_SECRET_KEY }}
