.github, config: cross-compile an arm64 asset
And install Zig via script, rather than snap. One benefit is that it
allows us to pin a Zig version.

The script is adapted from one I added to the Exercism Zig repo [1].

[1] https://github.com/exercism/zig/commit/9dfb95f031b1

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
 
-      - name: On Linux, install Zig
+      - name: On Linux, install musl
         if: matrix.os == 'linux'
-        run: ./.github/bin/linux-install-build-tools
+        run: ./.github/bin/linux-install-musl
 
       - name: Install Nim
         uses: iffy/install-nim@ac410af52523f06e0fa037ee81d06ead7b95692c
