--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,9 @@ jobs:
         with:
           fetch-depth: 0 # Allows using `git log` to set initial release notes.
 
-      - name: On Linux, install Zig
+      - name: On Linux, install musl
         if: matrix.os == 'linux'
-        run: ./.github/bin/linux-install-build-tools
+        run: ./.github/bin/linux-install-musl
 
       - name: Install Nim
         uses: iffy/install-nim@ac410af52523f06e0fa037ee81d06ead7b95692c
@@ -62,8 +62,33 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  checksums:
+  cross-compile:
     needs: [build]
+    runs-on: ubuntu-22.04
+    name: cross-compile
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
+
+      - name: Install Nim
+        uses: iffy/install-nim@ac410af52523f06e0fa037ee81d06ead7b95692c
+        with:
+          version: "binary:2.0.0"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install Zig
+        run: ./.github/bin/linux-install-zig
+
+      - name: Cross-compile
+        run: ./.github/bin/cross-compile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  checksums:
+    needs: [cross-compile]
     runs-on: ubuntu-22.04
     name: Upload signatures and checksums
     permissions:
