--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,24 @@ on:
   workflow_dispatch:
 
 jobs:
+  create-empty-release:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
+        with:
+          fetch-depth: 0 # Allows using `git log` to set initial release notes.
+
+      - name: Create empty release
+        shell: bash
+        run: ./.github/bin/publish-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build:
+    needs: [create-empty-release]
     strategy:
       fail-fast: false
       matrix:
@@ -31,8 +48,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
-        with:
-          fetch-depth: 0 # Allows using `git log` to set initial release notes.
 
       - name: On Linux, install musl
         if: matrix.os == 'linux'
@@ -55,11 +70,6 @@ jobs:
         env:
           OS: ${{ matrix.os }}
           ARCH: ${{ matrix.arch }}
-
-      - name: Publish release
-        shell: bash
-        run: ./.github/bin/publish-release
-        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cross-compile:
