.github, cli, completion: cross-compile arm64 Windows asset

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,6 +87,9 @@ jobs:
           - runs-on: macos-12
             zig_target: aarch64-macos-none
 
+          - runs-on: windows-2022
+            zig_target: aarch64-windows-gnu
+
     name: "${{ matrix.zig_target }}"
     runs-on: ${{ matrix.runs-on }}
     permissions:
