.github: cross-compile riscv64 Linux asset

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,9 @@ jobs:
           - runs-on: ubuntu-22.04
             zig_target: aarch64-linux-musl
 
+          - runs-on: ubuntu-22.04
+            zig_target: riscv64-linux-musl
+
           - runs-on: macos-12
             zig_target: aarch64-macos-none
 
