.github: fix silently failing arm64 Windows build
The new job indicated success, but didn't upload an executable.

This was because on the Windows runner, the default shell is PowerShell:

    Run ./.github/bin/install-zig
      ./.github/bin/install-zig
      shell: C:\Program Files\PowerShell\7\pwsh.EXE -command ". '{0}'"

Explicitly set the shell to bash for every cross compilation job.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,9 +106,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Zig
+        shell: bash
         run: ./.github/bin/install-zig
 
       - name: Cross-compile
+        shell: bash
         run: ./.github/bin/cross-compile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
