--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
           - runs-on: macos-12
             zig_target: aarch64-macos-none
 
-          - runs-on: windows-2022
+          - runs-on: ubuntu-22.04
             zig_target: aarch64-windows-gnu
 
     name: "${{ matrix.zig_target }}"
