--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,6 +87,9 @@ jobs:
           - runs-on: macos-12
             zig_target: aarch64-macos-none
 
+          - runs-on: ubuntu-22.04
+            zig_target: aarch64-windows-gnu
+
     name: "${{ matrix.zig_target }}"
     runs-on: ${{ matrix.runs-on }}
     permissions:
@@ -103,9 +106,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Zig
+        shell: bash
         run: ./.github/bin/install-zig
 
       - name: Cross-compile
+        shell: bash
         run: ./.github/bin/cross-compile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
