--- a/.github/workflows/fetch-configlet.yml
+++ b/.github/workflows/fetch-configlet.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Run fetch-configlet
         shell: bash
         run: ./scripts/fetch-configlet
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run the downloaded configlet
         env:
@@ -49,3 +51,5 @@ jobs:
           Remove-Item bin/configlet.exe
           scripts/fetch-configlet.ps1
           bin/configlet.exe --version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
