build: build arm64 macOS binary natively
Apple silicon (M1) macOS runners are now available in public beta [1].

Closes: #801

[1] https://github.blog/changelog/2023-10-02-github-actions-apple-silicon-m1-macos-runners-are-now-available-in-public-beta/

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,10 @@ jobs:
             arch: x86-64
 
           - os: macos
+            runs-on: macos-13-xlarge
+            arch: arm64
+
+          - os: macos
             runs-on: macos-12
             arch: x86-64
 
@@ -83,9 +87,6 @@ jobs:
 
           - runs-on: ubuntu-22.04
             zig_target: riscv64-linux-musl
-
-          - runs-on: macos-12
-            zig_target: aarch64-macos-none
 
           - runs-on: ubuntu-22.04
             zig_target: aarch64-windows-gnu
