--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,8 +107,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Zig
+        uses: mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
+        with:
+          version: 0.14.1
+
+      - name: Install zigcc
         shell: bash
-        run: ./.github/bin/install-zig
+        run: ./.github/bin/install-zigcc
 
       - name: Cross-compile
         shell: bash
